From bdb5e6b (closure), 94f15d0 (master):
========================================

(*) Merge master branch (94f15d0) on to closure branch (bdb5e6b)

From 7c44eb3 (closure):
======================

(*) Add prisim/closure.py to repo to analyze closure phase data

From f3c3107 (phasing):
======================

In prisim/interferometry.py,

(*) In member function duplicate_measurements() of class
InterferometerArray, duplicate attribute projected_baselines to the
required shape

From 7c44eb3 (master):
=====================

In scripts/run_prisim.py,

(*) Rotate visibilities to the phase reference before duplicating the
redundant visibilities and saving in UVFITS format. 

From d158bd9 (cp-fixes):
=======================

In prisim/delay_spectrum.py,

(*) Modify default cosmology to Planck 2015 xiii results with
H0=100 km/s/Mpc
(*) In member function subband_delay_transform_closure_phase() of class
DelaySpectrum, units of closure phase delay spectrum returned is in Hz.
(*) In member functions compute_averaged_closure_phase_power_spectrum()
and compute_individual_closure_phase_power_spectrum() of class
DelayPowerSpectrum, the input closure phase delay spectra are in units
of Hz and the output delay power spectra of closure phases are in units
of Mpc/h.

From 8b5a2f3 (cp-fixes):
=======================

In prisim/delay_spectrum.py,

(*) Change units of closure phase delay spectra in docstring of member
function subband_delay_transform_closure_phase() of class
DelaySpectrum

From 1638739 (cp-fixes):
=======================

In prisim/delay_spectrum.py,

(*) In member function compute_averaged_closure_phase_power_spectrum()
of class DelayPowerSpectrum, check for presence of keys in dictionary,
shapes of various quantities, and the math of cross-power spectrum
(*) Fix math in subband_delay_transform_closure_phase() of class
DelayPowerSpectrum

From 4838e42 (cp-fixes):
=======================

In prisim/delay_spectrum.py,
